# CalibrateDetectors

./: .gitignore  CMakeLists.txt  CalibrateDetectors.VC.VC.opendb  CalibrateDetectors.sln
Debug/: app.ilk  macros.lib
app/: Constants.h  PitchPropSet.h  PitchSet.cpp  app.cpp  app.vcxproj  app.vcxproj.filters  calibrateLayersHist.h  histlayerSums.cpp  macros.h
app/Debug/: app.obj.enc  app.pch  vc140.idb
ipch/APP-b5a3302e/: APP-606816b.ipch  APP-8253d28d.ipch
ipch/APP-dbde510/: APP-8253d28d.ipch
macros/: calculatePitchProp.cpp  calculateTimeSums.cpp  configuration.h  convertCartesian.cpp  convertLayerPosition.cpp  createMaskDataTree.cpp  getCalibrationParameters.cpp  histogramDensity.cpp  histogramElectronLayers.cpp  histogramMaskLayers.cpp  histogramXYPositions.cpp  macros.vcxproj  macros.vcxproj.filters  positionsTreeToDataSet.cpp
macros/Debug/: macros.idb
