cmake_minimum_required(VERSION 3.5)
project(CalibrateDetectors)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    app/app.cpp
    app/calibrateLayersHist.h
    app/checkReconstructable.cpp
    app/configlayers.h
    app/configparticletimes.h
    app/Constants.cpp
    app/Constants.h
    app/CppDebug.cpp
    app/CppDebug.h
    app/DataSet.cpp
    app/DataSet.h
    app/Event.cpp
    app/Event.h
    app/FitData.h
    app/FitSet.cpp
    app/FitSet.h
    app/Group.cpp
    app/Group.h
    app/HistElecDifferences.h
    app/histogramElecLayers.h
    app/HistogramPair.h
    app/HistogramTimeSums.h
    app/HistogramXY.h
    app/HistUVWPositions.h
    app/Hit.h
    app/LayerHit.h
    app/macros.h
    app/MCPTDiff.h
    app/PitchData.h
    app/PitchPropSet.h
    app/PitchSet.cpp
    app/ReconBool.h
    app/stdafx.cpp
    app/stdafx.h
    app/targetver.h
    app/TripleCheck.h
    include/dirent.h
    macros/anuprocess.cc
    macros/anuprocess.cpp
    macros/calculatePitchProp.cpp
    macros/calculateTimeSums.cpp
    macros/checkTimeSums.cpp
    macros/configuration.h
    macros/constructEvents.cpp
    macros/convertCartesian.cpp
    macros/convertLayerPosition.cpp
    macros/differenceOfLayers.cpp
    macros/driver.cpp
    macros/firstCut.cpp
    macros/getCalibrationParameters.cpp
    macros/histogramDifferenceElecLayers.cpp
    macros/histogramElectronLayers.cpp
    macros/histogramMaskLayers.cpp
    macros/histogramUVWPositions.cpp
    macros/histogramXYPositions.cpp
    macros/identifyAndTime.cpp
    macros/LayerLengthsConfig.h
    macros/loadFromTreeExistingDataset.cpp
    macros/plotTimeSpectra.cpp
    macros/plotTimeSpectraDS.cpp
    macros/plotTimeSpectraEvents.cpp
    macros/plotTimeSpectraOLD.cpp
    macros/plotTimeSums.cpp
    macros/positionsTreeToDataSet.cpp
    macros/ReadWriteTree.cpp
    macros/ReadWRiteTreeusingENUM.cpp
    macros/scanFiles.cpp
    macros/selectPosIonElec.cpp
    macros/sortReconData.cpp
    macros/test.cpp
    macros/treeIO.cpp)

add_executable(CalibrateDetectors ${SOURCE_FILES})